fix(about): change spacing for clsoing para

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -190,6 +190,5 @@
 
 .closing-para {
   margin-top: 10 * $spacer;
-  margin-bottom: 10 * $spacer;
   font-size: 20px;
 }
